symfony/web/themes/default/css/main.css
/* ... */
.modal.fade {
  top: -25%;
  -webkit-transition: opacity 0.3s linear, top 0.3s ease-out;
     -moz-transition: opacity 0.3s linear, top 0.3s ease-out;
      -ms-transition: opacity 0.3s linear, top 0.3s ease-out;
       -o-transition: opacity 0.3s linear, top 0.3s ease-out;
          transition: opacity 0.3s linear, top 0.3s ease-out;
}

.modal.fade.in {
  top: 50%;
}

.modal-header {
  padding: 12px 15px;
  background-color:#f28c38;
  -moz-border-radius-topleft: 4px;
-webkit-border-top-left-radius: 4px;
 border-top-left-radius: 4px;
-moz-border-radius-topright: 4px;
-webkit-border-top-right-radius: 4px;
border-top-right-radius: 4px;
font-size:18px;
color:#fff;
}

.modal-header .close {
	background: url(../images/close.png) no-repeat 0 0;
	display:block;
	width:22px;
	height:22px;
	position:absolute;
	top:9px;
	right:10px;
	text-indent:-9999px;
	cursor:pointer;
}

.modal-body {
	min-height:50px;
  max-height: 400px;
  padding: 15px;
  overflow-y: auto;
  background-color:#f7f6f6;
  color:#5d5d5d;
}

.modal-form {
  margin-bottom: 0;
}

.modal-footer {
  padding: 0 15px 15px 15px;
  margin-bottom: 0;
  text-align: left;
  background-color: #f7f6f6;
  -webkit-border-radius: 0 0 6px 6px;
     -moz-border-radius: 0 0 6px 6px;
          border-radius: 0 0 6px 6px;
}

.modal-footer:before,
.modal-footer:after {
  display: table;
  content: "";
}

.modal-footer:after {
  clear: both;
}

.modal-footer .btn + .btn {
  margin-bottom: 0;
}

.modal-footer .btn-group .btn + .btn {
  margin-left: -1px;
}

.modal form ol {
	border-bottom:none;
	margin:0;
	padding:0;
    border-bottom: 1px solid #DEDEDE;
}
.modal form ol li {
	width:360px;
}
.modal form ol li.line {
	width: 100%;
}
.modal form ol label {
	float:left;
	width:115px;
	padding-top:3px;
}
.modal form ol label.line {
	width: auto;
}
.modal form ol input {
	width:220px;
}

.modal form ol input.calendar {
	width:190px;
	float:left;
}
.modal form ol select {
	width:233px;
}
.modal form ol textarea {
	width:220px;
	height:100px;
}
.modal form ol li.required {
    margin-top: 0;
}
.modal form ul.checkList li label {
    width: 95%;
}
.modal form input[type=checkbox] {
    margin: 3px 3px 0 0;
    width: auto;
	border: none;
    padding: 0;
}
/* ================ Modal box styles: End ================ */

/* ================ Hyperlink styles: Begin ================ */
a.closeText {
    color:#aa4935;
    text-decoration: none;
}
/* ================ Hyperlink styles: End ================ */

/* ================ Timesheet styles: Begin ================ */
.timesheet .top h3 {
	font-size:18px;
	float:left;
	margin-top: 2px;
}
.editTimesheet .top h3 {
	font-size:18px;
	float:left;
	margin:0 0 10px 0;
}
.timesheet .top select {
	width:200px;
	float:left;
	height:28px;
	margin: 0 5px 0 10px;
}
.timesheet .top button {
	float:left;
	margin:0 0 5px 10px;
}
.timesheet .bottom {
	border-top:1px solid #dedede;
	margin-top:10px;
	padding-top:10px;
}
.timesheet .bottom em {
	font-size:14px;
	float:left;
}
.timesheet .bottom p {
	text-align:right;
}
/*
.editTimesheet input {
	width:40px;
}
*/
input.timeBox {
	width:40px;
}
/*
.editTimesheet input.main-input {
	width:150px;
	float:left;
}
*/
.editTimesheet table.table td {
    vertical-align: top;
}
.editTimesheet .toDelete {
    margin-top: 6px;
}
.editTimesheet input[type="button"], .editTimesheet input[type="submit"] {
    margin-left: 5px;
}
.editTimesheet select, .editTimesheet input, .editTimesheet .checkbox-input {
	float:left;
}
.editTimesheet .checkbox-input {
	clear:both;
	margin:0 0 10px 7px;
}
.editTimesheet .bottom {
	border-top:1px solid #dedede;
	margin-top:10px;
	padding-top:10px;
}
.editTimesheet .bottom .required {
	float:left;
	width:425px;
	color:#a9a9a9;
	font-size:11px;
	text-align:left;
}
.editTimesheet .bottom .required em {
	color:#aa4935;
}
.editTimesheet input.project {
    width: 280px;
}
/* ================ Timesheet styles: End ================ */

/* ================ PIM sidebar styles: Begin ================ */
#sidebar {
	width:202px;
	float:left;
	margin:0 17px 0 0;
	min-height:300px;
}
#sidebar #sidenav {
	margin:19px 0 0 0;
	padding:7px;
	background: #f28c38 url(../images/sidebar-nav-bg.png) repeat-y top right;
	-webkit-border-radius: 3px;
	-moz-border-radius: 3px;
	border-radius: 3px;
}
#sidebar #sidenav a {
	color:#fff;
	display:block;
	-webkit-border-radius: 3px;
	-moz-border-radius: 3px;
	border-radius: 3px;
	padding:7px 7px;
	width:174px;
	text-decoration:none;
	margin-bottom:5px;
	border-bottom:1px solid #f19a52;
}
#sidebar #sidenav a:hover {
	background-color:#ce6d1d;
}
#sidebar #sidenav .selected a {
	background-color:#555657;
	color:#fff;
	border-bottom:none;
}
/* ================ PIM sidebar styles: End ================ */

/* ================ PIM styles: Begin ================ */
.pimPane {
	width:97%;
	float:left;
}
.pimPane .head, .pimPane .inner {
	margin-left:220px;
}
.pimPane #profile-pic h1 {
	background: #f3f3f3 url(../images/h1-bg.png) left bottom repeat-x;
	font-size:14px;
	color:#5d5d5d;
	padding:9px 15px;
	line-height:20px;
	border:1px solid #dedede;
	-moz-border-radius-topleft: 3px;
	-webkit-border-top-left-radius: 3px;
	 border-top-left-radius: 3px;
	-moz-border-radius-topright: 3px;
	-webkit-border-top-right-radius: 3px;
	border-top-right-radius: 3px;
}
.pimPane #profile-pic img {
	border:1px solid #dedede;
	border-top:none;
}
.pimPane form p.normal {
	float:left;
}
.pimPane form p.required {
	float:left;
	width:425px;
	margin-top:0px;
	color:#a9a9a9;
	font-size:11px;
}
.pimPane form p.required em {
	color:#aa4935;
}
.pimPane form ol li label { /* Used in attachments */
    margin-top: 0; 
}
/* ... */

